objects/Truck_booking__c.object
<CustomObject>
    <label>Truck booking</label>
    <nameField>
        <displayFormat>BKNO-{0000}</displayFormat>
        <label>Booking number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Truck bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Truck bookings</relationshipLabel>
        <relationshipName>Truck_bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Truck__c</fullName>
        <label>Truck</label>
        <referenceTo>Truck__c</referenceTo>
        <relationshipLabel>Truck bookings</relationshipLabel>
        <relationshipName>Truck_bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>not started</fullName>
                </value>
                <value>
                    <fullName>progress</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>payment pending</fullName>
                </value>
                <value>
                    <fullName>payment received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truck bookings</relationshipLabel>
        <relationshipName>Truck_bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_KM__c</fullName>
        <label>total KM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Area__c</fullName>
        <label>Booking Area</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delivery_Area__c</fullName>
        <label>delivery Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Value_You_Have_To_Pay__c</fullName>
        <label>Total Value You Have To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>for_customer</fullName>
        <active>true</active>
        <label>for customer</label>
    </recordTypes>
    <validationRules>
        <fullName>Duplicate1</fullName>
        <active>false</active>
        <errorConditionFormula>Truck__r.Number_of_Time_Booked__c = 1</errorConditionFormula>
        <errorDisplayField>Truck__c</errorDisplayField>
        <errorMessage>This truck already has booked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mandatory_for_booking1</fullName>
        <active>true</active>
        <errorConditionFormula>Account__c   =  NULL</errorConditionFormula>
        <errorMessage>Please Select a  Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mandatory_for_booking2</fullName>
        <active>true</active>
        <errorConditionFormula>Truck__c = NULL</errorConditionFormula>
        <errorMessage>Please  Select a Truck</errorMessage>
    </validationRules>
</CustomObject>